fixed tablet alignment and navbar issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,7 @@ h1, h2 {
 /* General Utility Classes */
 .section-title {
     padding-top: 100px;
+    margin-bottom: 20px;
 }
 
 .d-flex-row {
@@ -129,7 +130,7 @@ ul {
 }
 
 .show-menu {
-    transform: translateX(0%);
+    transform: translateX(-0%);
 }
 
 /* Mobile Hamburger Menu */
@@ -160,6 +161,94 @@ ul {
 .change .bar-3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
+}
+
+/* Tablet Nav Styles */
+@media only screen and (min-width:601px and max-width:799px) {
+    nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 70px;
+        background-color: inherit;
+        position: fixed;
+        width: 100%;
+        max-width: 100vw;
+        z-index: 1000;
+        background-color: white;
+    }
+    
+    .navbar-logo {
+        margin: 10px;
+        border: 4px solid var(--primary);
+        width: 50px;
+        height: 50px;
+        font-size: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 30% 0 30% 0;
+        transition: all 0.3s ease;
+    }
+    
+    ul {
+        list-style-type: none;
+    }
+    
+    .navbar-links {
+        position: fixed;
+        right: 0px;
+        height: calc(100vh - 70px);
+        top: 70px;
+        display: flex;
+        flex-direction: column;
+        -ms-flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        width: 40%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        border-left: 1px solid var(--primary);
+        background-color: white;
+    }
+    
+    .navbar-links li:hover {
+        border-bottom: 3px solid var(--secondary);
+    }
+    
+    .show-menu {
+        transform: translateX(-0%);
+    }
+    
+    /* Mobile Hamburger Menu */
+    .burger {
+        display: inline-block;
+        cursor: pointer;
+        margin: 20px;
+    }
+    
+    .bar-1, .bar-2, .bar-3 {
+        width: 35px;
+        height: 5px;
+        background-color: var(--primary);
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+    /* Rotate first bar */
+    .change .bar-1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+    }
+    /* Fade out the second bar*/
+    .change .bar-2 {
+        opacity: 0;
+    }
+    
+    /* Rotate third bar */
+    .change .bar-3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+    }
 }
 
 /* Non-Mobile Browser Nav Styles */
@@ -197,9 +286,10 @@ ul {
     justify-content: center;
     align-items: center;
     align-content: center;
+    justify-items: center;
     width: 100%;
     height: 100vh;
-    padding-top: 70px;
+    padding-top: 60px;
 }
 
 .hero h2 {
@@ -245,15 +335,17 @@ ul {
 /* Button Styles */
 
 .btn {
-    border: 1px solid var(--primary);
+    border: 2px solid var(--primary);
     border-radius: 10px;
-    padding: 5px;
+    padding: 0 10px;
     margin-top: 20px;
     margin-right: 20px
     font-size: 1rem;
     color: var(--primary);
     background-color: white;
     font-weight: bold;
+    display: flex;
+    align-items: center;
 }
 
 .btn:hover {
@@ -262,7 +354,7 @@ ul {
 
 @media only screen and (min-width:800px) {
     .btn {
-        border: 4px solid var(--primary);
+        border: 2px solid var(--primary);
         border-radius: 50px;
         padding: 15px;
         font-size: 1.3rem;
@@ -336,6 +428,21 @@ ul {
     animation: slide-in-top 0.5s;
 }
 
+@keyframes slide-in-bottom {
+    0% {
+        transform: translateY(200px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slide-in-bottom {
+    animation: slide-in-bottom 0.7s;
+}
+
 .delay-1 {
     animation-delay: 0.5;
     -o-animation-delay: 0.5s;
@@ -376,7 +483,7 @@ ul {
 .p-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     padding-left: 20px;
     padding-right: 20px;
@@ -410,7 +517,7 @@ ul {
 
 /* Responsive Portfolio Styles */
 
-@media only screen and (min-width:800px) {
+@media only screen and (min-width:768px) {
     .p-card {
         padding-left:  100px;
         padding-right: 100px;
@@ -438,7 +545,7 @@ ul {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 0;
+    padding: 5px;
     margin: 10px;
     margin-top: 50px;
     max-width: 800px;
@@ -547,14 +654,27 @@ form input, textarea {
     border-style: none;
     border-image: none;
     border-color: none;
-    border-bottom: 2px solid var(--primary);
+    border-bottom: 2px solid var(--primary)!important;
     margin: 6px;
     margin-top
     font-size: 1rem;
     letter-spacing: 2px;
     text-transform: uppercase;
     height: 3rem;
+    padding: 5px;
 }
+
+#name,
+#email,
+#msg:focus {
+    outline-color: black;
+  -webkit-outline-color: black;
+  -moz-outline-color: black;
+  -ms-outline-color: black;
+  -o-outline-color: black;
+  /* Use a border to apply the outline */ 
+  border: 1px solid rgba(0, 0, 0, 0);
+} 
 
 form button {
     margin-top: 1rem;
@@ -563,6 +683,25 @@ form button {
     justify-self: center;
 }
 
+#submit-btn {
+    background-color: black;
+    color: white;
+    font-size: 1.2rem;
+    height: 2rem;
+    width: 4rem;
+    border-radius: 10px;
+    margin-left: auto;
+}
+
+#submit-btn:hover {
+    background-color:var(--primary);
+}
+
 #contact-links {
     padding-top: 3rem;
+}
+
+#contact-links a {
+    justify-content: center;
+    align-items: center;
 }
